--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
 	},
 	"dependencies": {
 		"astro": "^5.13.4",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.544.0",
 		"react": "^19.1.0",
-		"react-dom": "^19.1.0"
+		"react-dom": "^19.1.0",
+		"tailwind-merge": "^3.3.1"
 	},
 	"devDependencies": {
 		"@astrojs/react": "^4.3.0",
@@ -43,6 +47,7 @@
 		"prettier-plugin-organize-imports": "^4.2.0",
 		"prettier-plugin-tailwindcss": "^0.6.14",
 		"tailwindcss": "^4.1.12",
+		"tw-animate-css": "^1.3.8",
 		"typescript": "5.8.3",
 		"vite": "^7.1.5",
 		"vite-tsconfig-paths": "^5.1.4",
