--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,8 +27,7 @@
 		"**/.astro": true,
 		"**/dist": true,
 		"**/.vercel": true,
-		"**/playwright-report": true,
-		"**/test-results": true
+		"**/playwright-report": true
 	},
 	"files.associations": {
 		"*.css": "tailwindcss"
