--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
 		"verify": "turbo run format build lint test typecheck e2e"
 	},
 	"dependencies": {
+		"@radix-ui/react-separator": "^1.1.7",
+		"@radix-ui/react-slot": "^1.2.3",
 		"astro": "^5.13.4",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
